@@ -1,5 +1,11 @@
 2011-02-05 S. Thiell <stephane.thiell@cea.fr>
 
+	* Worker/*.py: Performance: removed _invoke() indirections when generating
+	events + local variables optimization.
+
+	* Task.py: Performance: replaced _TaskMsgTree metaclass by direct calls to
+	MsgTree methods + local variables optimization.
+
 	* Worker/Ssh.py: Local variables optimization.
 
 	* CLI/Clush.py: Do not disable internal messages gathering when using -bL
